@@ -3,8 +3,6 @@ DIST maven-artifact-2.1_pre20070614.tar.bz2 89663 RMD160 a06b5e8ff493d1fa0f697d4
 DIST maven-artifact-2.1_pre20071021-gen-src.tar.bz2 7314 RMD160 edbd0c20c64513b1aea108495782e6531cf7151e SHA1 55e21e88d6ac25d4e476a49bbc6a00cc374c756f SHA256 f7db80ba575bf463793c5f9f7d8c22d36c04470264697ad03ffbd1cca644cca0
 DIST maven-artifact-2.1_pre20071021.tar.bz2 95152 RMD160 34d92d0b54138aed4067d579e2c3247dc9e49921 SHA1 882f15da2c29a171440d9c759fc1b4a923ece48e SHA256 18e73b6ba62c1962060e232d1ebb871f6c9162f7a69be9d8f32edbcf39923034
 EBUILD maven-artifact-2.1_pre20070614.ebuild 1070 RMD160 00cdf7760b97d22f19b75b8644a14d52106b5a42 SHA1 86dc87059ca4361c75ab0a449c3b367ceb067754 SHA256 352999490944fd5e9b9fce1c643cb88f00eb94edf17f859fc11c9b04342d257c
-EBUILD maven-artifact-2.1_pre20071021.ebuild 1184 RMD160 3ee0d3a1138fe0e2ecc552a518bcef009b11aa65 SHA1 d2f49d25f8ac349abf136de1cca5be1a7c178c01 SHA256 b466e61ff4c1c8393f9467acff6fba0e61afc8cd723602788331103f00634e9e
-MISC ChangeLog 827 RMD160 b2e2572413fd75d8ca3ecd9462350fedf6e2a48e SHA1 8ee5ca2525658eb2677972597bc047d1eca0d389 SHA256 3036e4f0793f6ee8152d4dc2f6f25e51247bd96b3d037345162a86025b2918aa
-MISC maven-artifact-2.1_pre20071021-gen-src.tar.bz2 7314 RMD160 edbd0c20c64513b1aea108495782e6531cf7151e SHA1 55e21e88d6ac25d4e476a49bbc6a00cc374c756f SHA256 f7db80ba575bf463793c5f9f7d8c22d36c04470264697ad03ffbd1cca644cca0
-MISC maven-artifact-2.1_pre20071021.tar.bz2 95152 RMD160 34d92d0b54138aed4067d579e2c3247dc9e49921 SHA1 882f15da2c29a171440d9c759fc1b4a923ece48e SHA256 18e73b6ba62c1962060e232d1ebb871f6c9162f7a69be9d8f32edbcf39923034
+EBUILD maven-artifact-2.1_pre20071021.ebuild 1216 RMD160 4514e3287a649d29b18f5ace320bda0669274426 SHA1 85ec2afed9da72f8e6123412291b4b2976f6933c SHA256 f69f62484d8ae50ff548e57850717d9f6727d937224a8d53d2c0630ca9148af6
+MISC ChangeLog 1089 RMD160 9bff6de4fbd7203fdcaa93feafaa6bffa42f3b4c SHA1 343b0e6c6967ebea6a18ea2d6dbcb87cd7fe4866 SHA256 8063d0f1cd92f41df90ccc108601995f221c7f65a4110ee810c88722fed3691f
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
