@@ -3,6 +3,10 @@
 # $Header: $
 
   21 Oct 2007; kiorky <kiorky@cryptelium.net>
+  maven-artifact-2.1_pre20071021.ebuild:
+  update to use lastest deps
+
+  21 Oct 2007; kiorky <kiorky@cryptelium.net>
   maven-artifact-2.1_pre20070614.ebuild,
   +maven-artifact-2.1_pre20071021.ebuild:
   version bump
